# huffman

./: CMakeLists.txt
additional/: additional.cpp  additional.hpp
additional/consts/: consts.hpp
counter/: counter.cpp  counter.hpp
testing/: huff_testing.cpp
testing/file/: myfile.cpp  myfile.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
tree/: tree.cpp  tree.hpp
tree/bit_set/: bit_set.hpp
